--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Mímica</title>
+    <title>Guess the Mime</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Juego de Mímica</h1>
+        <h1>Guess the Mime</h1>
         <div class="game">
             <div id="timer" class="timer">Tiempo: 60</div>
-            <div id="wordDisplay" class="word-display">Gira el dispositivo para comenzar</div>
-            <button id="startButton" class="btn" style="display: none;">Comenzar</button>
-            <div id="score" class="score">Correctas: 0 | Incorrectas: 0</div>
+            <div id="wordDisplay" class="word-display">Mímica</div>
+            <button id="startButton" class="btn">Comenzar</button>
         </div>
     </div>
     <script src="script.js"></script>
